# vertica-mcp-server

./: .gitignore  README.md  pyproject.toml  pytest.ini
docker-example/: README.md  docker-compose.yml
docker-example/init-scripts/: 01-sample-data.sql
src/vertica_mcp_server/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_integration_connection.py  test_integration_mcp_protocol.py  test_integration_tools.py  test_vertica_connection.py
